Add features and style in Navigator

--- a/luca-client/public/index.html
+++ b/luca-client/public/index.html
@@ -29,6 +29,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Luca</title>
+    <style>
+      a {
+        text-decoration: none;
+        color: black;
+      }
+      a:visited {
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: none;
+      }
+      a:focus {
+        text-decoration: none;
+      }
+      a:hover,
+      a:active {
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
