--- a/luca-client/public/index.html
+++ b/luca-client/public/index.html
@@ -6,7 +6,7 @@
       src="https://kit.fontawesome.com/2c7ca2e05a.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="Luca_favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -14,6 +14,12 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,6 +36,11 @@
     -->
     <title>Luca</title>
     <style>
+      body {
+        margin: 0;
+        font-family: "Poppins", sans-serif, adobe-clean-han-japanese,
+          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      }
       a {
         text-decoration: none;
         color: black;
