Fix cascading error in index.html and Add style in main page

--- a/luca-client/public/index.html
+++ b/luca-client/public/index.html
@@ -37,6 +37,7 @@
     <title>Luca</title>
     <style>
       body {
+        overflow-x: hidden;
         margin: 0;
         font-family: "Poppins", sans-serif, adobe-clean-han-japanese,
           -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
